# modo

./: pyproject.toml
docs/: todo.md
src/modo/: __init__.py  config.py  data.py  display.py  util.py
