[project]
name = "modo"
version = "0.1.0"
description = "A simple CLI work hours tracker."
authors = [
    {name = "Riley Thai", email = "rileythai@proton.me"},
]
dependencies = ["click>=8.1"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
modo = "modo:cli"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true
