[project]
name = "modo"
version = "0.1.0"
description = "A simple CLI work hours tracker."
authors = [
    {name = "Riley Thai", email = "rileythai@proton.me"},
]
dependencies = ["typer>=0.9.0","pandas>=2.0.0","pyarrow>=10.0.0"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
modo = "modo:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true
